WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188321
Fix IPC::Connection leak in StorageManager
https://bugs.webkit.org/show_bug.cgi?id=188321
Summary
Fix IPC::Connection leak in StorageManager
Chris Dumez
Reported
2018-08-03 15:23:59 PDT
Fix IPC::Connection leak in StorageManager .
Attachments
Patch
(6.28 KB, patch)
2018-08-03 16:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews200 for win-future
(12.92 MB, application/zip)
2018-08-03 22:39 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-08-03 15:24:25 PDT
<
rdar://problem/42748485
>
Chris Dumez
Comment 2
2018-08-03 16:25:07 PDT
Created
attachment 346559
[details]
Patch
EWS Watchlist
Comment 3
2018-08-03 22:38:49 PDT
Comment on
attachment 346559
[details]
Patch
Attachment 346559
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8758919
New failing tests: http/tests/security/video-poster-cross-origin-crash2.html
EWS Watchlist
Comment 4
2018-08-03 22:39:00 PDT
Created
attachment 346582
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 5
2018-08-06 11:31:43 PDT
Comment on
attachment 346559
[details]
Patch Clearing flags on attachment: 346559 Committed
r234611
: <
https://trac.webkit.org/changeset/234611
>
WebKit Commit Bot
Comment 6
2018-08-06 11:31:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug